# lunara

./: .gitignore  DASHBOARD_SPEC.md  README.md  pyproject.toml
.agentcrew/: README.md  config.example.yaml  config.yaml  progress.json  tasks.yaml
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Header.tsx  LogViewer.tsx  PipelineControl.tsx
frontend/src/hooks/: useDashboard.ts
frontend/src/mocks/: agents.ts  history.ts  logs.ts  tasks.ts
src/agentcrew/: __init__.py
src/agentcrew/agents/: __init__.py
src/agentcrew/agents/agent1/: __init__.py  agent.py  llm.py  models.py  parser.py  pingpong.py  renderer.py
src/agentcrew/agents/agent2/: __init__.py  agent.py  cli.py  generator.py  parser.py
src/agentcrew/agents/agent3/: __init__.py  agent.py  context.py  executor.py  parser.py  task_runner.py
src/agentcrew/agents/agent4/: __init__.py  agent.py  auth.py  curl_runner.py  gradle_parser.py  (+1 more)
src/agentcrew/dashboard/: __init__.py  __main__.py  app.py  services.py
src/agentcrew/notification/: __init__.py  base.py  discord.py  dispatcher.py
src/agentcrew/prm/: __init__.py  context_injector.py  failure_handler.py  opencode_wrapper.py  orchestrator.py  progress_monitor.py
src/agentcrew/schemas/: __init__.py  config.py  progress.py  task.py
src/components/: AgentConfig.tsx  PipelineStatus.tsx  RunHistory.tsx  StatsBar.tsx  TaskTable.tsx
src/mocks/: progress.ts
tests/: test_agent1.py  test_agent2.py  test_agent3.py  test_agent4.py  test_dashboard_api.py  test_notification.py  test_prm_e2e.py  test_schemas.py
(+8 files in other folders)
